<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                style="@style/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardBackgroundColor="@color/height2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:background="#C33636"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgFace"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_max="128dp"
                        app:layout_constraintHeight_min="128dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_max="128dp"
                        app:layout_constraintWidth_min="128dp"
                        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                        tools:ignore="ImageContrastCheck"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgFace" />

                    <TextView
                        android:id="@+id/tvDobTitle"
                        style="@style/hintText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/tv_date_of_birth"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/guideline4"
                        app:layout_constraintTop_toBottomOf="@+id/tvName" />

                    <TextView
                        android:id="@+id/tvDob"
                        style="@style/regularText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textIsSelectable="true"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="@+id/guideline4"
                        app:layout_constraintTop_toBottomOf="@+id/tvDobTitle"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/tvPhoneTitle"
                        style="@style/hintText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/tv_phone_number"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/btnCall"
                        app:layout_constraintTop_toBottomOf="@+id/tvDob" />

                    <TextView
                        android:id="@+id/tvPhone"
                        style="@style/regularText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:textIsSelectable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/btnCall"
                        app:layout_constraintTop_toBottomOf="@+id/tvPhoneTitle" />

                    <ImageButton
                        android:id="@+id/btnCall"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/cd_call_button"
                        app:layout_constraintBottom_toBottomOf="@+id/tvPhone"
                        app:layout_constraintStart_toStartOf="@+id/guideline4"
                        app:layout_constraintTop_toTopOf="@+id/tvPhoneTitle"
                        app:srcCompat="@drawable/ic_phone_button" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="20dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="20dp" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardLocation"
                        style="@style/card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        app:cardBackgroundColor="@color/background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline5"
                        app:layout_constraintStart_toStartOf="@+id/guideline4"
                        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
                        app:layout_constraintVertical_bias="0.0">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/icLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:contentDescription="@string/cd_location_icon"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_location"
                                app:tint="#757575" />

                            <TextView
                                android:id="@+id/tvCountry"
                                style="@style/boldText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="16dp"
                                android:textIsSelectable="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/icLocation"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                            <TextView
                                android:id="@+id/tvCity"
                                style="@style/regularText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="12dp"
                                android:layout_marginEnd="16dp"
                                android:textIsSelectable="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/icLocation"
                                app:layout_constraintTop_toBottomOf="@+id/tvCountry"
                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/tvStreet"
                                style="@style/regularText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="12dp"
                                android:layout_marginEnd="16dp"
                                android:textIsSelectable="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/icLocation"
                                app:layout_constraintTop_toBottomOf="@+id/tvCity"
                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                            <TextView
                                android:id="@+id/tvCoordinates"
                                style="@style/linkText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="12dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/icLocation"
                                app:layout_constraintTop_toBottomOf="@+id/tvStreet"
                                app:layout_constraintVertical_bias="0.0" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_update"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imgNoConnection"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_no_connection_to_the_server"
            android:src="@drawable/ic_connection_off"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>